Исправлены мелкие ошибки в работе хранилища ключей и исключений.

--- a/templates/first_page.html
+++ b/templates/first_page.html
@@ -46,7 +46,7 @@ button {
     <label for="endPoint">Конечная точка:</label>
     <input type="text" id="endPoint" name="endPoint" placeholder="Например, Санкт-Петербург" required>
 
-    <button type="submit">Найти маршрут</button>
+    <button type="submit">Показать погоду</button>
   </form>
 </div>
 
